--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
       "name": "M Anas Latif",
       "email": "contact@anaslatif.com",
       "url": "https://www.maldev.net/m.anaslatif"
+    },
+    {
+      "name": "Zunaira Fatima",
+      "email": "zunaira.fatima@maldev.net",
+      "url": "https://www.maldev.net/zunaira.fatima"
     }
   ]
 }
