--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "homepage": "https://researchcorridor.org/",
+  "homepage": "https://researchcorridor.ca",
   "author": "m.anaslatif <contact@anaslatif.com>",
   "contributors": [
     {
