--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.10",
+    "@heroui/react": "^2.6.14",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
