--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
     "tailwindcss-animate": "^1.0.7"
