--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
