--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.4.0",
     "swiper": "^11.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
