--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@grapesjs/react": "^2.0.0",
     "@heroui/react": "^2.6.14",
     "@internationalized/date": "^3.7.0",
     "@mantine/hooks": "^7.17.0",
@@ -24,6 +25,8 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.15.0",
+    "grapesjs": "^0.22.6",
+    "grapesjs-tailwind": "^1.0.11",
     "next": "15.1.3",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
